# aula_09

./: README.md  dados.parquet  etl.py  exemplo_00.py  logging_exemplos_erros.py  pyproject.toml  timer_decorator.py  utils_log.py
