[project]
name = "aula-09"
version = "0.1.0"
description = ""
authors = [
    {name = "vitorspada",email = "vitorspada.rs@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "pyarrow (>=25.0.0,<26.0.0)",
    "fastparquet (>=2026.5.0,<2027.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
